--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@langchain/community": "^0.3.57",
+    "@langchain/core": "^0.3.78",
+    "@langchain/openai": "^0.6.14",
     "@supabase/supabase-js": "^2.74.0",
     "axios": "^1.12.2",
+    "langchain": "^0.3.35",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0"
+  },
+  "resolutions": {
+    "@langchain/core": "0.3.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
