--- a/package.json
+++ b/package.json
@@ -9,28 +9,34 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@langchain/community": "^0.3.57",
-    "@langchain/core": "^0.3.78",
-    "@langchain/openai": "^0.6.14",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.2",
     "@supabase/supabase-js": "^2.74.0",
     "axios": "^1.12.2",
-    "langchain": "^0.3.35",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "geist": "^1.3.1",
+    "lucide-react": "^0.454.0",
     "next": "15.5.4",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
-  },
-  "resolutions": {
-    "@langchain/core": "0.3.0"
+    "next-auth": "^4.24.11",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
+    "postcss": "^8.5",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
